--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -1,4 +1,4 @@
-<div>
+<div class="w-50 p-3">
     <form action="/api/books" method="get">
       <div class="form-group">
         <label for="title">Search by title</label>
