--- a/views/book.ejs
+++ b/views/book.ejs
@@ -10,7 +10,7 @@
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Author: <%= book.author %></li>
         <li class="list-group-item">Genre: <%= book.genre %></li>
-        <li class="list-group-item">Price: <%= book.price %></li>
+        <li class="list-group-item">Price: <%= book.price %> USD</li>
         <li class="list-group-item">Publish date: <%= book.publish_date %></li>
       </ul>
     </div>
