removed unused cssfile, added info on price field.

--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -8,7 +8,7 @@
 
         <input type="text" class="form-control" id="genre" name="genre" placeholder="Genre">
 
-        <input type="text" class="form-control" id="price" name="price" placeholder="Price">
+        <input type="text" class="form-control" id="price" name="price" placeholder="Price less than...">
       </div>
       <button type="submit" class="btn btn-primary btn-lg btn-block">Search!</button>
   </form>
